--- a/configure.ac
+++ b/configure.ac
@@ -397,6 +397,7 @@ AC_DEFINE_UNQUOTED([HAVE_GCC_ATOMICS], [$HAVE_GCC_ATOMICS],
 AC_CHECK_FUNCS(isatty)
 AC_CHECK_FUNCS(strcasecmp)
 AC_CHECK_FUNCS(strncasecmp)
+AC_CHECK_FUNCS(prctl)
 
 CPPFLAGS="$CPPFLAGS -I\$(top_srcdir)/include -I\$(top_builddir)/include"
 
