tests:oomtest: Don't run pty test by default
There are some issues with running it.  Keep it if run by hand, but
don't run it by default.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -21,7 +21,7 @@ PYTESTS = test_syncio.py \
 	test_relpkt_large.py test_udp_nocon.py test_conacc.py
 
 OOMTESTS = oomtest0 oomtest1 oomtest2 oomtest3 oomtest4 oomtest5 oomtest6 \
-	oomtest7 oomtest8 oomtest9 oomtest10 oomtest11 oomtest12 oomtest13
+	oomtest7 oomtest8 oomtest9 oomtest10 oomtest11 oomtest12
 
 TESTS = $(PYTESTS) $(OOMTESTS)
 
