gtlssh*: Don't install man pages if not installing the program
The makefile was always installing the man page.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/configure.ac
+++ b/configure.ac
@@ -320,18 +320,30 @@ GTLSSH=
 GTLSSYNC=
 GTLSSHD=
 GTLSSH_KEYGEN=
+GTLSSHMAN=
+GTLSSYNCMAN=
+GTLSSHDMAN=
+GTLSSH_KEYGENMAN=
 if test $HAVE_OPENSSL -eq 1; then
    if test $HAVE_PAM -eq 1; then
       GTLSSHD=gtlsshd
+      GTLSSHDMAN=gtlsshd.8
    fi
    GTLSSH=gtlssh
    GTLSSYNC=gtlssync
    GTLSSH_KEYGEN=gtlssh-keygen
+   GTLSSHMAN=gtlssh.1
+   GTLSSYNCMAN=gtlssync.1
+   GTLSSH_KEYGENMAN=gtlssh-keygen.1
 fi
 AC_SUBST(GTLSSHD)
 AC_SUBST(GTLSSH)
 AC_SUBST(GTLSSYNC)
 AC_SUBST(GTLSSH_KEYGEN)
+AC_SUBST(GTLSSHDMAN)
+AC_SUBST(GTLSSHMAN)
+AC_SUBST(GTLSSYNCMAN)
+AC_SUBST(GTLSSH_KEYGENMAN)
 
 AC_CHECK_MEMBER([struct termios2.c_ispeed],
 	[AC_DEFINE([HAVE_TERMIOS2], [1], [termios2 is present])],
