tools: Fix man pages
There was one misnamed macro and the macros were in the wrong place.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -37,10 +37,10 @@ gtlssh_LDADD = libgtlssh.a libgensiotool.a $(top_builddir)/lib/libgensio.la \
 gtlsshd_LDADD = libgtlssh.a libgensiotool.a $(top_builddir)/lib/libgensio.la \
 	@PAMLIB@ @OPENSSL_LIBS@
 
-manpages = gensiot.1 @GTLSSHDMAN@ @GTLSSHMAN@ @GTLSSH_KEYGENMAN@ @GTLSSSYNCMAN@
+manpages = gensiot.1 gtlsshd.8 gtlssh.1 gtlssh-keygen.1 gtlssync.1
 
 if INSTALL_DOC
-man_MANS = gensiot.1 gtlsshd.8 gtlssh.1 gtlssh-keygen.1 gtlssync.1
+man_MANS = gensiot.1 @GTLSSHDMAN@ @GTLSSHMAN@ @GTLSSH_KEYGENMAN@ @GTLSSYNCMAN@
 endif
 
 EXTRA_DIST = $(manpages) gtlssh-keygen.in CMakeLists.txt gtlssync
