--- a/configure.ac
+++ b/configure.ac
@@ -205,6 +205,9 @@ m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
 AC_CONFIG_MACRO_DIR([m4])
 AC_STDC_HEADERS
 AC_CHECK_LIB(nsl,main)
+AC_CHECK_LIB(avahi-client, avahi_client_new,
+	     [AC_DEFINE([HAVE_AVAHI], [1], [Have avahi installed])
+	     LIBS="-lavahi-client -lavahi-common $LIBS"])
 
 # Now check for swig
 SWIG_DIR=
