--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -5,7 +5,7 @@ noinst_HEADERS = telnet.h heap.h utils.h uucplock.h buffer.h \
 	gensio_filter_ssl.h gensio_filter_telnet.h gensio_ll_ipmisol.h \
 	gensio_filter_certauth.h gensio_filter_msgdelim.h \
 	gensio_filter_relpkt.h gensio_filter_trace.h gensio_filter_perf.h \
-	errtrig.h
+	errtrig.h avahi_watcher.h
 
 libgensio_la_SOURCES = \
 	gensio.c gensio_osops.c gensio_net.c gensio_udp.c gensio_stdio.c \
@@ -21,7 +21,8 @@ libgensio_la_SOURCES = \
 	gensio_filter_msgdelim.c gensio_msgdelim.c \
 	gensio_filter_relpkt.c gensio_relpkt.c \
 	gensio_filter_trace.c gensio_trace.c \
-	gensio_filter_perf.c gensio_perf.c gensio_conacc.c errtrig.c
+	gensio_filter_perf.c gensio_perf.c gensio_conacc.c errtrig.c \
+	gensio_mdns.c avahi_watcher.c
 
 libgensio_la_LDFLAGS = $(OPENSSL_LIBS)
 
