tools: Add an mdns tool
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,19 @@ if(ENABLE_OPENSSL)
   endif()
 endif()
 
+option(ENABLE_MDNS "Enable MDNS" ON)
+set(HAVE_AVAHI 0)
+if(ENABLE_MDNS)
+  CHECK_LIBRARY_EXISTS(avahi-client "avahi_client_new" "" AVAHI_CLI_LIB_FOUND)
+  CHECK_LIBRARY_EXISTS(avahi-common "avahi_malloc" "" AVAHI_COM_LIB_FOUND)
+  CHECK_INCLUDE_FILE(avahi-client/client.h AVAHI_CLI_INC_FOUND)
+  CHECK_INCLUDE_FILE(avahi-common/malloc.h AVAHI_COM_INC_FOUND)
+  if(AVAHI_CLI_LIB_FOUND AND AVAHI_CLI_INC_FOUND AND AVAHI_COM_LIB_FOUND AND AVAHI_COM_INC_FOUND)
+    set(HAVE_AVAHI 1)
+    list(APPEND EXTRA_LIBS avahi-client avahi-common)
+  endif()
+endif()
+
 option(ENABLE_SWIG "Enable swig support" ON)
 if(ENABLE_SWIG)
   find_package(SWIG)
