mdns: Add regex and globbing support for string comparisons
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -144,6 +144,9 @@ check_symbol_exists(getrandom sys/random.h HAVE_GETRANDOM_FUNC)
 set (CMAKE_REQUIRED_DEFINITIONS "-D_GNU_SOURCE")
 check_symbol_exists(ptsname_r "stdlib.h" HAVE_PTSNAME_R)
 check_symbol_exists(cfmakeraw "termios.h" HAVE_CFMAKERAW)
+check_symbol_exists(signalfd "signalfd.h" HAVE_SIGNALFD)
+check_symbol_exists(regexec "regex.h" HAVE_REGEXEC)
+check_symbol_exists(fnmatch "fnmatch.h" HAVE_FNMATCH)
 
 if(UNIX)
   set(HAVE_STDIO 1)
