--- a/configure.ac
+++ b/configure.ac
@@ -318,6 +318,8 @@ AC_CHECK_FUNC(getrandom, [AC_DEFINE([HAVE_GETRANDOM_FUNC], [1],
 AC_CHECK_FUNCS(ptsname_r)
 AC_CHECK_FUNCS(cfmakeraw)
 AC_CHECK_FUNCS(signalfd)
+AC_CHECK_FUNCS(regexec)
+AC_CHECK_FUNCS(fnmatch)
 
 case $host_os in
 linux*) HAVE_WORKING_PORT0=1 ;;
