--- a/man/CMakeLists.txt
+++ b/man/CMakeLists.txt
@@ -10,6 +10,7 @@ install(FILES gensio_event.3 str_to_gensio.3 gensio_set_callback.3
 	gensio_acc_shutdown.3 gensio_acc_set_accept_callback_enable.3
 	gensio_acc_control.3 gensio_acc_get_type.3 gensio_add_default.3
 	str_to_gensio_accepter.3 gensio_acc_accept_s.3 gensio_acc_startup.3
+	gensio_mdns.3
 	DESTINATION ${CMAKE_INSTALL_FULL_MANDIR}/man3)
 
 macro(install_man3_symlink filepath sympath)
@@ -65,3 +66,9 @@ install_man3_symlink(gensio_add_default.3 gensio_get_defaultaddr.3)
 install_man3_symlink(gensio_add_default.3 gensio_del_default.3)
 install_man3_symlink(gensio_add_default.3 gensio_reset_defaults.3)
 install_man3_symlink(gensio_acc_accept_s.3 gensio_acc_set_sync.3)
+install_man3_symlink(gensio_mdns.3 gensio_alloc_mdns.3)
+install_man3_symlink(gensio_mdns.3 gensio_free_mdns.3)
+install_man3_symlink(gensio_mdns.3 gensio_mdns_add_service.3)
+install_man3_symlink(gensio_mdns.3 gensio_mdns_remove_service.3)
+install_man3_symlink(gensio_mdns.3 gensio_mdns_add_watch.3)
+install_man3_symlink(gensio_mdns.3 gensio_mdns_remove_watch.3)
