--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -7,7 +7,7 @@ man_MANS = gensio.5 gensio_event.3 str_to_gensio.3 gensio_set_callback.3 \
 	gensio_acc_control.3 gensio_acc_get_type.3 gensio_add_default.3 \
 	str_to_gensio_accepter.3 gensio_acc_accept_s.3 gensio_acc_startup.3 \
 	sergensio.5 gensio_to_sergensio.3 sergensio_baud.3 \
-	sergensio_b_alloc.3 sergensio_event.3
+	sergensio_b_alloc.3 sergensio_event.3 gensio_mdns.3
 
 LN_SF = $(LN_S) -f
 
@@ -84,6 +84,12 @@ install-data-hook:
 	$(LN_SF) sergensio_b_alloc.3 $(DESTDIR)$(man3dir)/sergensio_sbreak_b.3
 	$(LN_SF) sergensio_b_alloc.3 $(DESTDIR)$(man3dir)/sergensio_dtr_b.3
 	$(LN_SF) sergensio_b_alloc.3 $(DESTDIR)$(man3dir)/sergensio_rts_b.3
+	$(LN_SF) gensio_mdns.3 $(DESTDIR)$(man3dir)/gensio_alloc_mdns.3
+	$(LN_SF) gensio_mdns.3 $(DESTDIR)$(man3dir)/gensio_free_mdns.3
+	$(LN_SF) gensio_mdns.3 $(DESTDIR)$(man3dir)/gensio_mdns_add_service.3
+	$(LN_SF) gensio_mdns.3 $(DESTDIR)$(man3dir)/gensio_mdns_remove_service.3
+	$(LN_SF) gensio_mdns.3 $(DESTDIR)$(man3dir)/gensio_mdns_add_watch.3
+	$(LN_SF) gensio_mdns.3 $(DESTDIR)$(man3dir)/gensio_mdns_remove_watch.3
 
 RM_F = -rm -f
 
@@ -160,5 +166,11 @@ uninstall-hook:
 	$(RM_F) $(DESTDIR)$(man3dir)/sergensio_sbreak_b.3
 	$(RM_F) $(DESTDIR)$(man3dir)/sergensio_dtr_b.3
 	$(RM_F) $(DESTDIR)$(man3dir)/sergensio_rts_b.3
+	$(RM_F) $(DESTDIR)$(man3dir)/gensio_alloc_mdns.3
+	$(RM_F) $(DESTDIR)$(man3dir)/gensio_free_mdns.3
+	$(RM_F) $(DESTDIR)$(man3dir)/gensio_mdns_add_service.3
+	$(RM_F) $(DESTDIR)$(man3dir)/gensio_mdns_remove_service.3
+	$(RM_F) $(DESTDIR)$(man3dir)/gensio_mdns_add_watch.3
+	$(RM_F) $(DESTDIR)$(man3dir)/gensio_mdns_remove_watch.3
 
 EXTRA_DIST = $(man_MANS) CMakeLists.txt
