tools:gmdns: Add a man page
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -14,6 +14,7 @@ if(HAVE_AVAHI)
   add_executable(gmdns gensiomdns.c)
   target_link_libraries(gmdns gensio gensiotool)
   install(TARGETS gmdns DESTINATION bin)
+  install(FILES gmdns.1 DESTINATION ${CMAKE_INSTALL_FULL_MANDIR}/man1)
 endif()
 
 if(UNIX)
