--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -42,10 +42,11 @@ gtlssh_LDADD = libgtlssh.a libgensiotool.a $(top_builddir)/lib/libgensio.la \
 gtlsshd_LDADD = libgtlssh.a libgensiotool.a $(top_builddir)/lib/libgensio.la \
 	@PAMLIB@ @OPENSSL_LIBS@
 
-manpages = gensiot.1 gtlsshd.8 gtlssh.1 gtlssh-keygen.1 gtlssync.1
+manpages = gensiot.1 gtlsshd.8 gtlssh.1 gtlssh-keygen.1 gtlssync.1 gmdns.1
 
 if INSTALL_DOC
-man_MANS = gensiot.1 @GTLSSHDMAN@ @GTLSSHMAN@ @GTLSSH_KEYGENMAN@ @GTLSSYNCMAN@
+man_MANS = gensiot.1 @GTLSSHDMAN@ @GTLSSHMAN@ @GTLSSH_KEYGENMAN@ @GTLSSYNCMAN@ \
+	@GMDNSMAN@
 endif
 
 EXTRA_DIST = $(manpages) gtlssh-keygen.in CMakeLists.txt gtlssync
