--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -18,7 +18,7 @@ PYTESTS = test_syncio.py \
 	test_certauth_ssl_sctp_accept_connect.py test_mux_sctp_small.py \
 	test_mux_tcp_large.py test_mux_limits.py test_mux_oob.py \
 	test_relpkt_basic.py test_relpkt_small.py test_relpkt_medium.py \
-	test_relpkt_large.py test_udp_nocon.py test_conacc.py
+	test_relpkt_large.py test_udp_nocon.py test_conacc.py test_mdns.py
 
 OOMTESTS = oomtest0 oomtest1 oomtest2 oomtest3 oomtest4 oomtest5 oomtest6 \
 	oomtest7 oomtest8 oomtest9 oomtest10 oomtest11 oomtest12
