--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -45,8 +45,8 @@ gtlsshd_LDADD = libgtlssh.a libgensiotool.a $(top_builddir)/lib/libgensio.la \
 manpages = gensiot.1 gtlsshd.8 gtlssh.1 gtlssh-keygen.1 gtlssync.1 gmdns.1
 
 if INSTALL_DOC
-man_MANS = gensiot.1 @GTLSSHDMAN@ @GTLSSHMAN@ @GTLSSH_KEYGENMAN@ @GTLSSYNCMAN@ \
-	@GMDNSMAN@
+man1_MANS = gensiot.1 @GTLSSHMAN@ @GTLSSH_KEYGENMAN@ @GTLSSYNCMAN@ @GMDNSMAN@
+man8_MANS = @GTLSSHDMAN@
 endif
 
 EXTRA_DIST = $(manpages) gtlssh-keygen.in CMakeLists.txt gtlssync
