Add missing gensio_mdns.c to the cmakefile
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -37,7 +37,8 @@ set(BASE_LIBFILES
   gensio_conacc.c
   errtrig.c
   mdns.c
-  avahi_watcher.c)
+  avahi_watcher.c
+  gensio_mdns.c)
 
 set(UNIX_LIBFILES
   gensio_stdio.c
