Add configure flags for distcheck
distcheck will fail if you don't set the python installation directories
to something sane.

Also set --enable-internal-trace to allo oomtest to work.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -9,3 +9,9 @@ endif
 DIST_SUBDIRS = lib swig include tests tools man examples
 
 EXTRA_DIST = README.rst reconf CMakeLists.txt config.h.cmake
+
+# Set distcheck up so python files get installed someplace that will
+# work, and enable internal trace so oomtest will work.
+AM_DISTCHECK_CONFIGURE_FLAGS=--enable-internal-trace \
+	--with-pythoninstall=$(abs_top_builddir)/$(distdir)/_inst/lib/python \
+	--with-pythoninstalllib=$(abs_top_builddir)/$(distdir)/_inst/lib/python
