Handle missing sendmsg()
If sendmsg isn't there, create a substitute for it.  This involves
allocating memory temporarily, but that's the price for lousy
interfaces.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/configure.ac
+++ b/configure.ac
@@ -436,6 +436,7 @@ AC_LINK_IFELSE([AC_LANG_PROGRAM([], [
 AC_DEFINE_UNQUOTED([HAVE_GCC_ATOMICS], [$HAVE_GCC_ATOMICS],
 	           [Are GCC atomic operations available])
 
+AC_CHECK_FUNCS(sendmsg)
 AC_CHECK_FUNCS(isatty)
 AC_CHECK_FUNCS(strcasecmp)
 AC_CHECK_FUNCS(strncasecmp)
