--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -13,19 +13,24 @@ noinst_HEADERS = telnet.h heap.h utils.h uucplock.h buffer.h \
 libgensio_la_SOURCES = \
 	gensio.c gensio_osops.c gensio_net.c gensio_udp.c gensio_stdio.c \
 	sergensio.c sergensio_telnet.c sergensio_serialdev.c uucplock.c \
-	gensio_selector.c \
 	gensio_ssl.c gensio_base.c gensio_filter_ssl.c \
 	gensio_filter_telnet.c telnet.c buffer.c \
 	gensio_ll_fd.c gensio_ll_gensio.c gensio_acc.c gensio_acc_gensio.c \
 	gensio_ll_ipmisol.c sergensio_ipmisol.c \
-	utils.c selector.c gensio_sctp.c \
+	utils.c gensio_sctp.c \
 	gensio_filter_certauth.c gensio_certauth.c gensio_pty.c \
 	gensio_dummy.c gensio_echo.c gensio_mux.c gensio_file.c \
 	gensio_filter_msgdelim.c gensio_msgdelim.c \
 	gensio_filter_relpkt.c gensio_relpkt.c \
 	gensio_filter_trace.c gensio_trace.c \
-	gensio_filter_perf.c gensio_perf.c gensio_conacc.c errtrig.c \
-	mdns.c avahi_watcher.c gensio_mdns.c
+	gensio_filter_perf.c gensio_perf.c gensio_conacc.c errtrig.c
+
+if HAVE_AVAHI
+libgensio_la_SOURCES += mdns.c avahi_watcher.c gensio_mdns.c
+endif
+if HAVE_UNIX_OS
+libgensio_la_SOURCES += gensio_selector.c selector.c
+endif
 
 libgensio_la_LDFLAGS = $(OPENSSL_LIBS) -no-undefined
 
