--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -23,17 +23,11 @@ libgensio_la_SOURCES = \
 	gensio_filter_msgdelim.c gensio_msgdelim.c \
 	gensio_filter_relpkt.c gensio_relpkt.c \
 	gensio_filter_trace.c gensio_trace.c \
-	gensio_filter_perf.c gensio_perf.c gensio_conacc.c
+	gensio_filter_perf.c gensio_perf.c gensio_conacc.c \
+	gensio_stdio.c \
+	sergensio_serialdev.c uucplock.c \
+	gensio_pty.c
 
-if HAVE_STDIO
-libgensio_la_SOURCES += gensio_stdio.c
-endif
-if HAVE_PTY
-libgensio_la_SOURCES += sergensio_serialdev.c uucplock.c
-endif
-if HAVE_SERIALDEV
-libgensio_la_SOURCES += gensio_pty.c
-endif
 if HAVE_AVAHI
 libgensio_la_SOURCES += mdns.c avahi_watcher.c gensio_mdns.c
 endif
