Revert "Make unix and avahi conditionally compiled"
This reverts commit fc2b1376de2f9f5e5b569a8f78b5baa23428f417.

We want the stubs there for linkage.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -26,11 +26,9 @@ libgensio_la_SOURCES = \
 	gensio_filter_perf.c gensio_perf.c gensio_conacc.c \
 	gensio_stdio.c \
 	sergensio_serialdev.c uucplock.c \
-	gensio_pty.c
+	gensio_pty.c \
+	mdns.c avahi_watcher.c gensio_mdns.c
 
-if HAVE_AVAHI
-libgensio_la_SOURCES += mdns.c avahi_watcher.c gensio_mdns.c
-endif
 if HAVE_UNIX_OS
 libgensio_la_SOURCES += gensio_selector.c selector.c
 endif
