Add AC_CANONICAL_TARGET to configure.ac
So target_os gets set.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/configure.ac
+++ b/configure.ac
@@ -3,6 +3,7 @@ AC_SUBST(gensio_VERSION_MAJOR, 2)
 AC_SUBST(gensio_VERSION_MINOR, 2)
 AC_SUBST(gensio_VERSION_PATCH, 1)
 AC_SUBST(gensio_VERSION_STRING, ${PACKAGE_VERSION})
+AC_CANONICAL_TARGET
 AM_INIT_AUTOMAKE([-Wall])
 AC_CONFIG_HEADERS([config.h])
 AC_PROG_CC
