--- a/configure.ac
+++ b/configure.ac
@@ -297,16 +297,16 @@ _ACEOF
    echo "checking for python threads... $pythonusepthreads"
 
    if test "x$pythonusepthreads" = "xyes"; then
-      PYTHON_HAS_POSIX_THREADS=1
+      PYTHON_HAS_THREADS=1
    else
-      PYTHON_HAS_POSIX_THREADS=0
+      PYTHON_HAS_THREADS=0
    fi
 fi
 
 AC_SUBST(PYTHON_DIR)
 AC_SUBST(PYTHON_INSTALL_DIR)
 AC_SUBST(PYTHON_INSTALL_LIB_DIR)
-AC_SUBST(PYTHON_HAS_POSIX_THREADS)
+AC_SUBST(PYTHON_HAS_THREADS)
 AC_SUBST(PYTHON_SWIG_FLAGS)
 
 PYTHON_EXECUTABLE="${PYTHON}"
