Move address handling into os funcs
Address handling has to be combined with socket handling which has to be
combined with other OS functions.  Move address handling into the os
functions structure.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -7,7 +7,7 @@ noinst_HEADERS = telnet.h heap.h utils.h uucplock.h buffer.h \
 	gensio_filter_ssl.h gensio_filter_telnet.h gensio_ll_ipmisol.h \
 	gensio_filter_certauth.h gensio_filter_msgdelim.h \
 	gensio_filter_relpkt.h gensio_filter_trace.h gensio_filter_perf.h \
-	errtrig.h avahi_watcher.h gensio_osops_addrinfo.h gensio_osops_unix.h \
+	errtrig.h avahi_watcher.h gensio_osops_unix.h \
 	gensio_osops_sctp.h
 
 libgensio_la_SOURCES = \
@@ -27,7 +27,8 @@ libgensio_la_SOURCES = \
 	gensio_stdio.c \
 	sergensio_serialdev.c uucplock.c \
 	gensio_pty.c \
-	mdns.c avahi_watcher.c gensio_mdns.c
+	mdns.c avahi_watcher.c gensio_mdns.c \
+	gensio_addrinfo.c
 
 if HAVE_UNIX_OS
 libgensio_la_SOURCES += gensio_selector.c selector.c
