--- a/include/gensio/Makefile.am
+++ b/include/gensio/Makefile.am
@@ -4,7 +4,8 @@ pkginclude_HEADERS = gensio.h gensio_class.h sergensio.h sergensio_class.h \
 	gensio_ll_fd.h gensio_ll_gensio.h selector.h argvutils.h \
 	gensio_os_funcs.h gensio_err.h gensio_builtins.h gensio_osops.h \
 	gensio_list.h gensio_version.h gensio_dllvisibility.h \
-	gensio_deprecated.h gensio_mdns.h gensio_types.h
+	gensio_deprecated.h gensio_mdns.h gensio_types.h \
+	gensio_osops_addrinfo.h
 
 EXTRA_DIST = gensio_version.h.in CMakeLists.txt
 
