Add a comment to a cmake warning suppression
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ include(CheckCSourceCompiles)
 include(GNUInstallDirs)
 
 if (WIN32)
+  # Suppress packing error warnings, as they are ubiquitous and don't matter.
   set (CMAKE_C_FLAGS "/wd4820")
 else()
   set (CMAKE_C_FLAGS "-Wall")
